--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -245,7 +245,7 @@
   </head>
 
   <body class="gradient">
-    <p>Hello World</p>
+    <p>Hello GIT</p>
     <a class="skip-to-content-link button visually-hidden" href="#MainContent">
       {{ 'accessibility.skip_to_text' | t }}
     </a>
