feat(liquid): add hero section

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -254,8 +254,10 @@
     {%- endif -%}
 
     {% sections 'header-group' %}
+    
+    {% section 'hero-section' %}
 
-     {% section 'custom-section' %}
+    {% section 'custom-section' %}
 
     <main id="MainContent" class="content-for-layout focus-none" role="main" tabindex="-1">
       {{ content_for_layout }}
