--- a/sections/hero-section.liquid
+++ b/sections/hero-section.liquid
@@ -37,6 +37,11 @@
       "id": "image",
       "label": "Фото"
     }
+  ],
+  "presets": [
+    {
+      "name": "Hero Steve"
+    }
   ]
 }
 {% endschema %}
