--- a/sections/hero.liquid
+++ b/sections/hero.liquid
@@ -64,10 +64,18 @@
       </div>
 
       <div class="hero__socials">
-        <a href="#" class="hero__social-link"><span>📸</span></a>
-        <a href="#" class="hero__social-link"><span>📘</span></a>
-        <a href="#" class="hero__social-link"><span>▶️</span></a>
-        <a href="#" class="hero__social-link"><span>🐦</span></a>
+        <a href="https://instagram.com" target="_blank" class="hero__social-link">
+          <img src="{{ 'instagram.svg' | asset_url }}" alt="Instagram" class="hero__social-icon">
+        </a>
+        <a href="https://facebook.com" target="_blank" class="hero__social-link">
+          <img src="{{ 'facebook.svg' | asset_url }}" alt="Facebook" class="hero__social-icon">
+        </a>
+        <a href="https://youtube.com" target="_blank" class="hero__social-link">
+          <img src="{{ 'youtube.svg' | asset_url }}" alt="YouTube" class="hero__social-icon">
+        </a>
+        <a href="https://twitter.com" target="_blank" class="hero__social-link">
+          <img src="{{ 'twitter.svg' | asset_url }}" alt="Twitter" class="hero__social-icon">
+        </a>
       </div>
     </div>
 
@@ -97,7 +105,8 @@
   align-items: center;
   justify-content: center;
   gap: 20px;
-  max-width: 1200px;
+  max-width: 1600px;
+  padding: 50px 0 0 50px;
   margin: 0 auto;
   position: relative;
 }
@@ -116,7 +125,7 @@
 }
 
 .hero__title {
-  font-size: 36px;
+  font-size: 48px;
   font-weight: 900;
   text-align: center;
   margin-bottom: 20px;
@@ -125,10 +134,6 @@
 @media (min-width: 768px) {
   .hero__title {
     font-size: 100px;
-    position: absolute;
-    top: 15%;
-    left: 22%;
-    transform: translate(-50%, -50%);
     text-align: left;
   }
 }
@@ -144,10 +149,6 @@
 @media (min-width: 768px) {
   .hero__quote {
     font-size: 24px;
-    position: absolute;
-    top: 38%;
-    left: 26%;
-    transform: translate(-50%, -50%);
     width: 630px;
     height: 132px;
     text-align: left;
@@ -175,20 +176,13 @@
   align-items: center;
   justify-content: center;
   width: 252px;
-  height: 50px;
+  height: 70px;
   border-radius: 50px;
   font-weight: bold;
   font-size: 18px;
   text-decoration: none;
   transition: all 0.3s;
   text-transform: uppercase;
-}
-
-@media (min-width: 768px) {
-  .hero__button {
-    height: 70px;
-    font-size: 18px;
-  }
 }
 
 .hero__button--primary {
@@ -244,5 +238,4 @@
   font-size: 24px;
   text-decoration: none;
 }
-
 </style>
